fix mobile spacing

--- a/styles/components/title.scss
+++ b/styles/components/title.scss
@@ -29,9 +29,11 @@
   background: var(--c-white);
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
   transform: rotate(-1.84deg);
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   @include on-breakpoint(tablet-up) {
     width: 700px;
+  margin-bottom: 100px;
+
    }
   }
   
